--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit
-nltk
+streamlit==1.28.1
+nltk>=3.6.1
 numpy
 pandas
 wordcloud
 regex
 plotly
 requests
-beautifulsoup4
+beautifulsoup4==4.11.1
 lxml
-sklearn
